general changes -- not verified but mostly small frontend stuff, commiting before bigger refactor